# dmdesignpattern

./: .travis.yml  CMakeLists.txt  README.md  build.bat  build.sh
test/StatePattern/: StatePattern.cpp
