cmake_minimum_required(VERSION 3.2)

PROJECT(dmdesignpattern)

LIST(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
INCLUDE(cmake/ModuleImport.cmake)
INCLUDE(cmake/ModuleCompileOptions.cmake)
ModuleSetCompileOptions()

SET(DMDESIGNPATTERN_VERSION_MAJOR "1")
SET(DMDESIGNPATTERN_VERSION_MINOR "0")
SET(DMDESIGNPATTERN_VERSION_PATCH "1")
SET(DMDESIGNPATTERN_VERSION "${DMDESIGNPATTERN_VERSION_MAJOR}.${DMDESIGNPATTERN_VERSION_MINOR}.${DMDESIGNPATTERN_VERSION_PATCH}")

MESSAGE(STATUS "VERSION: ${DMDESIGNPATTERN_VERSION}")

OPTION(USE_DMDESIGNPATTERN "use dmdesignpattern" OFF)

ModuleImport("dmsys" "thirdparty/dmsys")
ExeImport("test" "dmsys")

#ADD_CUSTOM_COMMAND(
#TARGET dmdesignpatterntest
#PRE_BUILD
#COMMAND ${CMAKE_COMMAND} -E copy_if_different
#${CMAKE_CURRENT_SOURCE_DIR}/config/test.csv
#$<TARGET_FILE_DIR:dmdesignpatterntest>
#)

#INSTALL(DIRECTORY include/ DESTINATION include)
#INSTALL(TARGETS dmdesignpattern
#        RUNTIME DESTINATION bin
#        LIBRARY DESTINATION lib
#        ARCHIVE DESTINATION lib)

#SET(DMDESIGNPATTERN_LIBS "dmdesignpattern")
#MARK_AS_ADVANCED(${DMDESIGNPATTERN_LIBS})